# image-ai-edit

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: catalog.json
docs/: README.md  api-catalog.md  ar-plan.md  ar.md  architecture.md  contributing.md  https-tunnel-guide.md  multi-section-fence-design.md  open-questions.md  poc-plan.md  runbook.md  server.md  stack-decision.md
research/: INDEX.md  ar-manuals-introductions-guides.md  ar-yard-objects-research.md
research/ar-survey/: README.md  process-log.md
research/ar-survey/01-web-ar/: findings.md
research/ar-survey/02-mobile-ar/: findings.md
research/ar-survey/03-cross-platform/: findings.md
research/ar-survey/04-methodologies/: findings.md
research/ar-survey/05-tech-stack/: findings.md
research/ar-survey/06-synthesis/: index.md
research/image-to-3d/: 01-hosted-apis.md  02-model-landscape.md  03-photogrammetry-and-neural.md  README.md  synthesis.md
research/multi-section-fence/: findings.md
scripts/: build_fence_components.py  dev_tunnel.py  fetch_ar_demo.py  fetch_catalog.py  fetch_skills.py  optimize_glb.py  poc.py  poc_fence_3d.py  serve.py
src/ai_edit/: __init__.py  config.py
src/ai_edit/models/: __init__.py  base.py
src/ai_edit/pipeline/: __init__.py  ar.py  ar_store.py  asset_bundle.py  asset_catalog.py  asset_validate.py  catalog_fetch.py  fence.py  (+2 more)
tests/: conftest.py
tests/models/: test_scene3d_dataclasses.py
tests/pipeline/: test_ar_store.py  test_asset_bundle.py  test_asset_catalog.py  test_asset_validate.py  test_catalog_fetch.py  test_fence.py  test_fence_components.py
tests/providers/: test_falai_multi_image_3d.py
tests/scripts/: test_dev_tunnel.py  test_optimize_glb.py
tests/server/: test_ar_routes.py  test_ar_smoke_network.py  test_catalog_routes.py  test_fence_routes.py  test_index_ui_wiring.py  test_insert_endpoint.py  test_logging.py
(+18 files in other folders)
