[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-edit"
version = "0.1.0"
description = "Modular Python wrappers for AI image and text models (MiniMax, Z.AI, and more)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
]