[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-edit"
version = "0.1.0"
description = "Modular Python wrappers for AI image and text models (MiniMax, Z.AI, and more)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pillow>=10.4",
    "fal-client>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
]
# Optional — only needed when expanding the catalog with assets that
# ship as .gltf + external textures (e.g. Poly Haven). See
# pipeline/asset_bundle.py.
bundle = [
    "pygltflib>=1.16",
]
# Optional — delivery-weight optimization of generated GLBs
# (scripts/optimize_glb.py). Also needs the gltf-transform Node CLI on
# PATH for the UV-preserving mesh decimation step (npx @gltf-transform/cli).
optimize = [
    "trimesh>=4.0",
    "numpy>=1.24",
    "pygltflib>=1.16",
    "pillow>=10.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "network: opts into the live-internet test gate (RUN_NETWORK_TESTS=1).",
]